--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div>
-<input type="text" [(ngModel)]="name">
-<p>{{ name }}</p>
 <h1>Im in the app component</h1>
-</div>
+<hr>
+<app-servers></app-servers>
