--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,3 +1,12 @@
-<h1>Im in the app component</h1>
-<hr>
-<app-servers></app-servers>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+        <h3>Im in the app component</h3>
+        <hr>
+        </div>
+        <app-servers></app-servers>
+    </div>
+
+  </div>
+
+
